--- a/angular.json
+++ b/angular.json
@@ -33,11 +33,11 @@
             ],
             "styles": [
               "src/styles.css",
-              "./node_modules/@gouvfr/dsfr/dist/dsfr/dsfr.css",
-              "./node_modules/@gouvfr/dsfr/dist/utility/utility.css"
+              "./node_modules/@gouvfr/dsfr/dist/dsfr/dsfr.min.css",
+              "./node_modules/@gouvfr/dsfr/dist/utility/utility.min.css"
             ],
             "scripts": [
-              "./node_modules/@gouvfr/dsfr/dist/dsfr/dsfr.module.js"
+              "./node_modules/@gouvfr/dsfr/dist/dsfr/dsfr.module.min.js"
             ]
           },
           "configurations": {
@@ -45,8 +45,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "1MB",
-                  "maximumError": "1.5MB"
+                  "maximumWarning": "500kB",
+                  "maximumError": "2MB"
                 },
                 {
                   "type": "anyComponentStyle",
