--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -51,8 +51,8 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v3
         with:
-          context: .docker
-          file: Dockerfile
+          context: .
+          file: .docker/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
