fix: Correction du stage seulement en prod

--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -1,10 +1,4 @@
 on:
-  workflow_dispatch:
-    inputs:
-      target:
-        description: 'Build target (prod or dev)'
-        required: true
-        default: 'prod'
 
   push:
     branches: [ "main" ]
@@ -45,17 +39,17 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Display target for debugging
-        run: echo "Build target is ${{ github.event.inputs.target }}"
+        run: echo "Build target is ${{ github.event.inputs.target}}"
 
       - name: Build and push Docker image
         id: build-and-push
         uses: docker/build-push-action@v3
         with:
-          context: .
-          file: .docker/Dockerfile
+          context: .docker/
+          file: Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          target: ${{ github.event.inputs.target }} # Cible le stage (dev ou prod)
+          target: 'prod'
           cache-from: type=gha
           cache-to: type=gha,mode=max
