fix: Possibilité de start nginx sans le backend

--- a/.docker/nginx.conf
+++ b/.docker/nginx.conf
@@ -2,27 +2,43 @@ server {
     listen 8080;
     server_name localhost;
 
-    # Angular frontend configuration
+    # Frontend
     location / {
         root /usr/share/nginx/html/browser;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy the API requests to the PHP-FPM backend
+    # API Backend (sans forcer la résolution immédiate)
     location /api/ {
-       
         include fastcgi_params;
-        fastcgi_pass backend:9000;  # Nom du service PHP-FPM 
+
+        # Tentative de proxy vers l'API backend si accessible
+        set $upstream_backend foreg-api:9000;
+
+        # Si l'API backend est indisponible, retour d'une page d'erreur
+        resolver 127.0.0.11 valid=30s;
+
+        fastcgi_pass $upstream_backend;  # Nom du service PHP-FPM 
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME /app/public/index.php; # Peut être à modifié
+        
+        # Timeout pour éviter les blocages si le backend ne répond pas
+        proxy_connect_timeout 5s;
+        proxy_read_timeout 10s;
+        proxy_send_timeout 10s;
 
-        #try_files $uri /index.php$is_args$args;  # Cette ligne redirige vers index.php si le fichier n'existe pas
+        # Gestion des erreurs backend
+        error_page 502 504 =404 /404;
+        error_page 500 = /500;
     }
 
-    # error_page 404 /404.html;
+    # Page d'erreur 404 personnalisée
+    location = /404.html {
+        root /usr/share/nginx/html;
+    }
 
-    # Handling errors
+    # Gestion des autres erreurs serveur
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
