--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -1,10 +1,10 @@
 on:
-
-  push:
-    branches: [ "main" ]
-    tags: [ 'v*.*.*' ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version tag (e.g., v1.0.0)'
+        required: true
+        default: 'v1.0.0'
 
 env:
   REGISTRY: ghcr.io
@@ -18,6 +18,14 @@ jobs:
       packages: write
 
     steps:
+      - name: Validate version input
+        id: validate_version
+        run: |
+          if [[ ! "${{ github.event.inputs.version }}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Error: Version must follow the format vX.X.X"
+            exit 1
+          fi
+
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -25,7 +33,6 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Log into registry ${{ env.REGISTRY }}
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
@@ -37,6 +44,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: ${{ github.event.inputs.version }}
 
       - name: Build and push Docker image
         id: build-and-push
@@ -44,10 +52,9 @@ jobs:
         with:
           context: .
           file: .docker/Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           target: 'prod' # Cible le stage (prod)
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
