--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,9 @@
             "styles": [
               "src/styles.css",
               "./node_modules/@gouvfr/dsfr/dist/dsfr/dsfr.min.css",
-              "./node_modules/@gouvfr/dsfr/dist/utility/utility.min.css"
+              "./node_modules/@gouvfr/dsfr/dist/utility/utility.min.css",
+              "./node_modules/ol/ol.css",
+              "./node_modules/ol-ext/dist/ol-ext.min.css"
             ],
             "scripts": [
               "./node_modules/@gouvfr/dsfr/dist/dsfr/dsfr.module.min.js"
