--- a/angular.json
+++ b/angular.json
@@ -87,6 +87,8 @@
               "zone.js/testing"
             ],
             "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js",
+            "codeCoverage": true, 
             "assets": [
               {
                 "glob": "**/*",
