test(App): ajout de ExtendedDatePipe au declaration de MesForestComponent pour run test

--- a/angular.json
+++ b/angular.json
@@ -9,6 +9,9 @@
         "@schematics/angular:component": {
           "style": "css",
           "standalone": false
+        },
+        "@schematics/angular:pipe": {
+          "standalone": false
         }
       },
       "root": "",
