--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --base-href=./geoportail-environnement.beta.gouv.fr/",
+    "build": "ng build --base-href=./",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test-firefox": "ng test --browsers Firefox"
