fix: Correction des config nginx de Dev et PROD

--- a/.docker/nginx.conf
+++ b/.docker/nginx.conf
@@ -14,10 +14,10 @@ server {
         include fastcgi_params;
 
         # Tentative de proxy vers l'API backend si accessible
-        set $upstream_backend foreg-api:9000;
+        set $upstream_backend gpe-api:9000;
 
         # Si l'API backend est indisponible, retour d'une page d'erreur
-        resolver 127.0.0.11 valid=30s;
+        resolver 127.0.0.11 valid=10s;
 
         fastcgi_pass $upstream_backend;  # Nom du service PHP-FPM 
         fastcgi_index index.php;
