--- a/.docker/nginx.conf
+++ b/.docker/nginx.conf
@@ -1,22 +1,27 @@
 server {
-    listen 8080;
-    server_name localhost;
+  listen 8080;
+  server_name localhost;
 
-    # Frontend
-    location / {
-        root /usr/share/nginx/html/browser;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;
-    }
+  root /usr/share/nginx/html;
 
-    # Page d'erreur 404 personnalisée
-    location = /404.html {
-        root /usr/share/nginx/html;
-    }
+  location ~ /index.html {
+    # no cache
+    add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+  }
 
-    # Gestion des autres erreurs serveur
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
+  location ~ .*\.css$|.*\.js$ {
+    # one year cache
+    add_header Cache-Control 'max-age=31449600';
+  }
+
+  location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
+    # one month cache
+    expires 1M;
+  }
+
+  location / {
+      index index.html index.htm;
+      try_files $uri $uri/ /index.html;
+  }
+
 }
