--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,13 @@
       "request": "launch",
       "preLaunchTask": "npm: test",
       "url": "http://localhost:9876/debug.html"
+    },
+    {
+      "name": "ng test-firefox",
+      "type": "chrome",
+      "request": "launch",
+      "preLaunchTask": "npm: test-firefox",
+      "url": "http://localhost:9876/debug.html"
     }
   ]
 }
