chore(path): Concordance pour le nouvel emplacement de l'application

--- a/.docker/nginx_dev.conf
+++ b/.docker/nginx_dev.conf
@@ -16,7 +16,7 @@ server {
         include fastcgi_params;
         fastcgi_pass backend:9000;  # Nom du service PHP-FPM
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME /app/public/index.php; # Peut être à modifié
+        fastcgi_param SCRIPT_FILENAME /opt/gpe-api/public/index.php; # Peut être à modifié
         # try_files $uri /index.php$is_args$args;  # Redirige vers index.php si le fichier n'existe pas
     }
 
