--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@edugouvfr/ngx-dsfr": "^1.11.9",
+    "jszip": "^3.10.1",
     "ol": "^10.2.1",
     "ol-ext": "^4.0.24",
+    "proj4": "^2.15.0",
     "rxjs": "~7.8.0",
+    "shpjs": "^6.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
@@ -32,6 +35,8 @@
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/ol-ext": "npm:@siedlerchr/types-ol-ext@^3.5.0",
+    "@types/proj4": "^2.5.6",
+    "@types/shapefile": "^0.6.4",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "^3.1.0",
