--- a/package.json
+++ b/package.json
@@ -11,41 +11,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
-    "@angular/common": "^18.2.0",
-    "@angular/compiler": "^18.2.0",
-    "@angular/core": "^18.2.0",
-    "@angular/forms": "^18.2.0",
-    "@angular/platform-browser": "^18.2.0",
-    "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/router": "^18.2.0",
-    "@edugouvfr/ngx-dsfr": "^1.11.9",
+    "@angular/animations": "^19.2.4",
+    "@angular/common": "^19.2.4",
+    "@angular/compiler": "^19.2.4",
+    "@angular/core": "^19.2.4",
+    "@angular/forms": "^19.2.4",
+    "@angular/platform-browser": "^19.2.4",
+    "@angular/platform-browser-dynamic": "^19.2.4",
+    "@angular/router": "^19.2.4",
+    "@edugouvfr/ngx-dsfr": "^1.13.4",
+    "@siedlerchr/types-ol-ext": "^3.6.1",
     "@turf/turf": "^7.2.0",
     "jsts": "^2.12.1",
     "jszip": "^3.10.1",
-    "ol": "^10.2.1",
-    "ol-ext": "^4.0.24",
+    "ol": "^10.4.0",
+    "ol-ext": "^4.0.29",
     "proj4": "^2.15.0",
-    "rxjs": "~7.8.0",
+    "rxjs": "~7.8.2",
     "shpjs": "^6.1.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.10"
+    "tslib": "^2.8.1",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.7",
-    "@angular/cli": "^18.2.7",
-    "@angular/compiler-cli": "^18.2.0",
-    "@types/jasmine": "~5.1.0",
-    "@types/ol-ext": "npm:@siedlerchr/types-ol-ext@^3.5.0",
+    "@angular-devkit/build-angular": "^19.2.5",
+    "@angular/cli": "^19.2.5",
+    "@angular/compiler-cli": "^19.2.4",
+    "@types/jasmine": "~5.1.7",
+    "@types/ol-ext": "npm:@siedlerchr/types-ol-ext@^3.6.1",
     "@types/proj4": "^2.5.6",
     "@types/shapefile": "^0.6.4",
-    "jasmine-core": "~5.2.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "~2.2.0",
+    "jasmine-core": "~5.6.0",
+    "karma": "~6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-firefox-launcher": "^2.1.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.5.2"
+    "typescript": "~5.8.2"
   }
 }
