--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foreg-ngx-site",
-  "version": "1.1.0",
+  "version": "v1.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
